--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,9 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.1",
+    "swagger-ui": "^5.4.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
